@@ -1,3 +1,11 @@
+TheMightyDude (21 July 2012)
+--------------------------------------
+Fixed Notice:  Undefined index: team in teams.php
+Fixed Notice:  Undefined variable: creator in teams.php
+Fixed Notice:  Undefined variable: db_logging in defence_vs_defence.php
+Fixed Notice:  Object of class ADORecordSet_mysqlt could not be converted to int in defence_vs_defence.php
+Fixed Notice:  Undefined variable: db_logging in defence_vs_defence.php
+Fixed Notice:  Object of class ADORecordSet_mysqlt could not be converted to int in kick_off_planet.php
 
 TheMightyDude (20 July 2012)
 --------------------------------------
